# HomeEdge-Orchestrator

./: .env.example  .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.agent  Dockerfile.controller  LICENSE.md  README.md  create_diff_md  docker-compose.yml
crates/homeedge-agent/: Cargo.toml
crates/homeedge-agent/src/: app_state.rs  config.rs  controller_client.rs  error.rs  main.rs
crates/homeedge-agent/src/loops/: assignment_poll.rs  heartbeat.rs  mod.rs  reconcile.rs  registration.rs
crates/homeedge-agent/src/observability/: metrics.rs  tracing.rs
crates/homeedge-agent/src/runtime/: mod.rs  process_manager.rs  service_instance.rs  service_runtime.rs  service_state.rs  worker.rs
crates/homeedge-controller/: Cargo.toml
crates/homeedge-controller/migrations/: 001_initial.sql
crates/homeedge-controller/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  router.rs
crates/homeedge-controller/src/background/: mod.rs  reassignment_loop.rs  stale_node_watcher.rs
crates/homeedge-controller/src/domain/: assignment_engine.rs  mod.rs  node_registry.rs
crates/homeedge-controller/src/handlers/: assignments.rs  heartbeat.rs  mod.rs  nodes.rs  register.rs  services.rs
crates/homeedge-controller/src/observability/: tracing.rs
crates/homeedge-controller/src/repository/: assignment_repository.rs  error.rs  mod.rs  node_repository.rs  observed_status_repository.rs  service_repository.rs  sqlite.rs
crates/homeedge-controller/tests/: controller_api.rs
crates/homeedge-test-utils/: Cargo.toml
crates/homeedge-types/: Cargo.toml
crates/homeedge-types/src/: api.rs  lib.rs  node.rs  service.rs
crates/homeedge-worker/: Cargo.toml
crates/homeedge-worker/src/: config.rs  health.rs  main.rs
docs/manual_tests/: manual_test_sprint1.md  manual_test_sprint_2.md  manual_test_sprint_3.md  manual_test_sprint_4.md  manual_test_sprint_5.md  manual_test_sprint_6.md
scripts/: demo-assign-service  demo-fail-node  dev-reset  dev-up
