[workspace]
resolver = "2"

members = [
    "crates/homeedge-types",
    "crates/homeedge-controller",
    "crates/homeedge-agent",
    "crates/homeedge-worker",
    "crates/homeedge-test-utils",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Dymora"]

[workspace.dependencies]

# async runtime
tokio = { version = "1", features = ["full"] }

# web
axum = "0.7"
tower = "0.5"
tower-http = "0.6"

# http client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# ids and time
uuid = { version = "1.18.1", default-features = false, features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }

# errors
thiserror = "1"
anyhow = "1"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# async traits (optional but likely useful)
async-trait = "0.1"
