[package]
name = "homeedge-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

homeedge-types = { path = "../homeedge-types" }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
