[package]
name = "homeedge-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", default-features = false, features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
